feat(instances): fix swagger issue)
