# backend/pkg/endpoints/endpoints.go
@@ -57,6 +57,7 @@ func configureGetEndpoints(ginEngine *gin.Engine, authMiddleware auth.AuthMiddle
 	ginEngine.GET("/payment", authMiddleware.AuthFunc, payment.CreditFetchHandler)
 	ginEngine.GET("/user", authMiddleware.AuthFunc, user.UserFetchHandler)
 	ginEngine.GET("/instances", authMiddleware.AuthFunc, instances.GetUserInstances)
+	ginEngine.GET("/instances/:containerId", authMiddleware.AuthFunc, instances.GetInstance)
 }
 
 func configurePostEndpoints(ginEngine *gin.Engine, authMiddleware auth.AuthMiddleware) {
